DataTransfer: Fix drag-and-drop while Shift is held down.

drag-and-drop wouldn't initiate when shift was held down
- Reproduced bug by adding layout tests in third_party/WebKit/LayoutTests/fast/dnd/dropEffect-for-modifier-*.html
- Fixed bug in selection_controller.cc

R=pwnall@chromium.org

Bug: 646339
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_layout_ng
Change-Id: I57bb7071d0db81364aa5d2113c93a4cbf9fc09f2
Reviewed-on: https://chromium-review.googlesource.com/1223032
Commit-Queue: Darwin Huang <huangdarwin@chromium.org>
Reviewed-by: Marijn Kruisselbrink <mek@chromium.org>
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Reviewed-by: Victor Costan <pwnall@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592257}
Former-commit-id: 3f5912ba03f3362f32d3cb3e0f382a41555495a6